# GCCS

./: .gitignore  Artist.cpp  Artist.h  BoundingBox.h  CMakeLists.txt  Flow.cpp  Flow.h  FlowGraphBuilder.cpp  FlowGraphBuilder.h  FlowGraphDebug.cpp  FlowGraphDebug.h  FlowGraphQuery.cpp  FlowGraphQuery.h  ImageFlowData.cpp  ImageFlowData.h  ImageFlowDataDebug.cpp  InnerProjection.h  NaiveSCellFilter.h  ProjectionFlow.h  RefundFlow.cpp  RefundFlow.h  binaryDataset.cpp  compensatingFlow.cpp  dependecies.txt  flowGraph.cpp  flowGraphED.cpp  imageProc.cpp  imageProc.h  io.cpp  io.h  issue.cpp  issueUtils.h  minimalCase.cpp  presentationFigures.cpp  projectionFlow.cpp  refundFlow.cpp  reportFigures.cpp  simpleFlow.cpp  test.cpp  typeDefs.h  (+4 more)
BestPair/: API.cpp  API.h  JointSet.cpp  JointSet.h  testBestPair.cpp
EnergyEvaluation/: CMakeLists.txt  EnergyEvaluation.cpp  EnergyEvaluation.h  testEnergyEvaluation.cpp  utils.cpp  utils.h
EnergyEvaluation/images/: img.pgm
ExhaustiveSearch/: CombinationsEvaluator.h  ContainerCombinator.h  LazyCombinations.h  SeparateInnerAndOuter.h
ExhaustiveSearch/PropertyChecker/: CheckableElementConcept.h  CheckableSeedPair.h  TrivialChecker.h
ExhaustiveSearch/PropertyChecker/MarkedMapChecker/: GluedIntersectionChecker.h  IntervalChecker.h  MarkedMapCheckerInterface.h  MinimumDistanceChecker.h
FlowGraph/: FlowGraph.h  FlowGraphBuilder.cpp  FlowGraphBuilder.h  FlowGraphDebug.cpp  FlowGraphDebug.h  FlowGraphQuery.cpp  FlowGraphQuery.h  FlowGraphUtils.cpp  FlowGraphUtils.h  ImageFlowData.cpp  ImageFlowData.h  ImageFlowDataDebug.cpp  ImageFlowDataDebug.h  ImageUpdater.h  weightSettings.cpp  weightSettings.h
FlowGraph/Patch/: BoykovWayFlowGraphBuilder.cpp  BoykovWayFlowGraphBuilder.h  OnePathFlowGraphBuilder.cpp  OnePathFlowGraphBuilder.h  SimpleFlowGraphBuilder.cpp  SimpleFlowGraphBuilder.h
Flows/: AdaptativeScaleFlow.h  BoundedFlow.h  PreprocessImage.h  ProjectionFlow.h  RefundFlow.cpp  RefundFlow.h  adaptativeScaleFlow.cpp  boundedFlow.cpp  modifiedFlow.cpp  onePathFlow.cpp  projectionFlow.cpp  refundFlow.cpp  simpleFlow.cpp
Flows/AdaptativeScaleFlow/: AdaptativeScaleFlow.h  adaptativeScaleFlow.cpp
Flows/BoundedFlow/: BoundedFlow.h  InnerProjection.h  boundedFlow.cpp
Flows/ProjectionFlow/: CurveProjector.h  ProjectionFlow.h  projectionFlow.cpp
Flows/RefundFlow/: RefundFlow.cpp  RefundFlow.h  refundFlow.cpp
FreezeOneExp/: CombinationsEvaluator.h
GluedCurve/: ConnectorFunctor.h  ConnectorSeed.h  ConnectorSeedRange.cpp  ConnectorSeedRange.h  GluedCurveIterator.cpp  GluedCurveIterator.h  library.h
ImageProc/: EightNeighborhoodPredicate.h  FourNeighborhoodPredicate.h  ImageProc.h  imageProc.h
Patch/: LambdaMaximalSegmentEstimator.h  LambdaMaximalSegmentEstimator.ih  MostCenteredMaximalSegmentEstimatorWrapper.h  PessimistMaximalSegmentEstimator.h  PessimistMaximalSegmentEstimator.ih  estimatorMethods.cpp  estimatorMethods.h  estimatorMethods.ih  patch.h
images/: camera_man_cut_no_camera-mask.pgm  camera_man_cut_no_camera.pgm  infinity.pgm  length.pgm  single_big_square.pgm  single_big_square_one_step.pgm  single_rectangle.pgm  single_square_gradient_mask.pgm
images/binary_images/: Bone01.pgm  Bone07.pgm  Bone09.pgm  Bone12.pgm  Xbomber.pgm  bird48.pgm  bottle15.pgm  c12b.pgm  camel06.pgm  cat17.pgm  cat32.pgm  classic01.pgm
images/binary_images_toothin/: bird38.pgm
images/curvature-map-test/: rounded-corners.pgm  single_square.pgm  smallest-disk.pgm  smallest-rounded-corners.pgm  smallest-square.pgm
images/flow-evolution/: comp1.pgm  comp2.pgm  disk-bruit-small.pgm  last_image.pgm  problematic_1.pgm  problematic_2.pgm  problematic_3.pgm  problematic_4.pgm  problematic_5.pgm  problematic_6.pgm  problematic_7.pgm  problematic_8.pgm  single_small_square.pgm  single_square.pgm  single_square_gradient.pgm  single_square_no_padding.pgm  single_triangle.pgm  smallest_disk.pgm
images/graph-weight-test/: almost_disk.pgm  last_image.pgm
images/mask-image-pair/: cameraman.pgm  mask-edit.pgm  mask.pgm
images/segSet/: 3.pgm  30-run-no-length-factor.pgm  60.pgm  quixote_small.pgm  straight-line-bruit-small.pgm
images/segSet/simple-flow-behaviour/: 44-run-length-factor.pgm
testModules/: testAllPossibilities.cpp  testCapture.cpp  testCompImages.cpp  testEnergyDilation.cpp  testEstimators.cpp  testFindSmallestStabbingCircles.cpp  testFlowGraphQuery.cpp  testFreezeOneExpansion.cpp  testIntExtMerge.cpp  testInvariantRotation.cpp  testQHalf.cpp  testSegCombQuixote.cpp  testSegCombinations.cpp
utils/: Artist.cpp  Artist.h  typeDefs.h  utils.cpp  utils.h
